# software-10

./: .env  README.md  pyproject.toml
quotesite/: manage.py
quotesite/quotes/: admin.py  authors.json  forms.py  index.txt  models.py  quotes.json  seed.py  urls.py  views.py
quotesite/quotes/migrations/: 0001_initial.py  0002_rename_name_tag_tag.py  0003_alter_author_description_alter_quote_quote_and_more.py  0004_alter_author_description.py  0005_alter_author_description.py  0006_alter_author_description.py  0007_alter_author_description.py  0008_alter_author_description.py  0009_alter_author_description.py  0010_author_author_description_idx.py  0011_alter_author_description.py  0012_alter_tag_tag.py
quotesite/quotes/scraping_quotes/scraping_quotes/: items.py  middlewares.py  pipelines.py  settings.py
quotesite/quotes/scraping_quotes/scraping_quotes/spiders/: authors.py  main.py  quotes.py
quotesite/quotes/templates/quotes/: author.html  base.html  detail.html  index.html  note.html  temp.html
quotesite/quotesite/: asgi.py  settings.py  urls.py  wsgi.py
quotesite/users/: apps.py  forms.py  models.py  urls.py  views.py
quotesite/users/migrations/: 0001_initial.py
