[tool.poetry]
name = "software-09"
version = "0.1.0"
description = ""
authors = ["Slytherin fantom <uliadiakiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
mongo = "^0.2.0"
mongoengine = "^0.28.2"
pymongo = {extras = ["srv"], version = "^4.7.2"}
django = "^5.0.6"
signals = "^0.0.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
